# dataDisk

./: .flake8  .pre-commit-config.yaml  .pypirc  API_QUICKSTART.md  CHANGELOG.md  CLINIC_TRIAL_GUIDE.md  CONTRIBUTING.md  Contributing.md  DEPLOYMENT_GUIDE.md  DEPLOY_GITHUB_PAGES.md  FEATURE_SUMMARY.md  HEALTHCARE_MVP.md  IMPLEMENTATION_COMPLETE.md  LICENCE.md  License.md  MANIFEST.in  NEXT_STEPS.md  NO_CODE_TRIAL.md  QUICKSTART_HEALTHCARE.md  QUICK_REFERENCE.md  README.md  README_HEALTHCARE.md  REVENUE_PROJECTION.md  Readme.md  app_healthcare.py  audit_1000.csv  clinic_test.py  customer_discovery_questions.md  deidentified_1000.csv  demonstration.py  example.rst  generate_mock_data.py  installation.rst  landing_page.html  mock_patient_data_1000.csv  next.config.js  outreach_templates.md  package-lock.json  package.json  pipeline.json  (+14 more)
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  python-package.yml  python-publish.yml
.streamlit/: config.toml
data/: Processed_churn_data.csv  customer_churn.csv  demonstration.py  ecommerce_data.csv  student_data.csv  test-pipeline.py
dataDisk/: __init__.py  api.py  data_sinks.py  data_sources.py  healthcare.py  parallel_processor.py  pipeline.py  transformation.py  validator.py
dataDisk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dataflow.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: NEW_FEATURES.md  index.html
examples/: advanced_data_source_usage.py  advanced_sink_usage.py  api_example.py  audit_trail.csv  custom_rules_example.py  data_sink_examples.py  data_source_examples.py  deidentified_patients.csv  healthcare_example.py  parallel_processing_examples.py  pipeline_examples.py  risk_score_example.py  transformation_examples.py  transformation_examples_fixed.py  validator_examples.py
source/: conf.py  custom.css  data_source.rst  index.rst  installation.rst  log_transformation.rst  robust-scaling.rst  sqrt_transformation.rst  usage.rst
src/app/: layout.tsx  page.tsx
src/app/about/: page.tsx
src/app/contact/: page.tsx
src/app/projects/: page.tsx
src/app/services/: page.tsx
src/components/: Footer.tsx  Navbar.tsx  ServiceCard.tsx
tests/: test_dataDisk.py  test_data_sources  test_data_sources.py  test_dataflow.py  test_error_handling.py  test_healthcare.py  test_parallel_processor.py  test_pipeline.py  test_transformation.py  test_validator.py
