[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "dataDisk"
version = "1.1.0"
description = "dataDisk is a Python package designed to simplify the creation and execution of data processing pipelines. It provides a flexible framework for defining sequential tasks, applying transformations, and validating data. Additionally, it includes a ParallelProcessor for efficient parallel execution."
authors = ["David Ansa <davitacols@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

# dependencies
# requests = "^2.26.0"
# numpy = "^1.21.0"
# pandas = "^1.3.0"
# multiprocessing

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310','py311', 'py312']

[tool.isort]
profile = "black"