[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataDisk"
version = "1.2.0"
description = "A Python package designed to simplify the creation and execution of data processing pipelines"
readme = "Readme.md"
authors = [
    {name = "David Ansa", email = "davitacols@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy>=1.19.0",
    "pandas>=1.0.0",
    "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "flake8>=3.8.0",
    "black>=22.0.0",
    "isort>=5.0.0",
]
excel = ["openpyxl>=3.0.0"]
sql = ["sqlalchemy>=1.4.0"]

[project.urls]
Homepage = "https://github.com/davitacols/dataDisk"
Issues = "https://github.com/davitacols/dataDisk/issues"

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.coverage.run]
source = ["dataDisk"]
omit = ["tests/*"]